Add Billing page and update dependencies

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="keywords" content="Vultisig App Store" />
     <meta name="author" content="Vultisig" />
     <link rel="author" href="https://vultisig.com" />
+    <meta name="mobile-web-app-capable" content="yes" />
 
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <link rel="apple-touch-startup-image" href="/favicon.ico" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Vultisig App Store" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
