Implement comprehensive SEO and meta tags

--- a/index.html
+++ b/index.html
@@ -4,40 +4,79 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vultisig App Store</title>
-    <meta name="description" content="Vultisig App Store" />
-    <meta name="keywords" content="Vultisig App Store" />
+    <title>Vultisig App Store - Secure Crypto Apps & Automations</title>
+    <meta
+      name="description"
+      content="Discover and install secure cryptocurrency applications and automations for your Vultisig wallet. Access recurring swaps, automated sends, and more powerful crypto tools."
+    />
+    <meta
+      name="keywords"
+      content="vultisig, crypto wallet, cryptocurrency, blockchain apps, crypto automation, recurring swaps, automated sends, web3, DeFi, bitcoin, ethereum"
+    />
     <meta name="author" content="Vultisig" />
     <link rel="author" href="https://vultisig.com" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#000000" />
 
+    <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="/favicon.ico" />
     <link rel="apple-touch-startup-image" href="/favicon.ico" />
     <meta name="apple-mobile-web-app-title" content="Vultisig App Store" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
 
-    <meta property="og:title" content="Vultisig App Store" />
-    <meta property="og:description" content="Vultisig App Store" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Vultisig App Store - Secure Crypto Apps & Automations"
+    />
+    <meta
+      property="og:description"
+      content="Discover and install secure cryptocurrency applications and automations for your Vultisig wallet. Access recurring swaps, automated sends, and more powerful crypto tools."
+    />
     <meta property="og:url" content="https://store.vultisigplugin.app" />
     <meta property="og:site_name" content="Vultisig App Store" />
-    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
     <meta
       property="og:image"
       content="https://store.vultisigplugin.app/images/banner.jpg"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta
+      property="og:image:alt"
+      content="Vultisig App Store - Secure Crypto Apps"
+    />
 
-    <meta name="twitter:title" content="Vultisig App Store" />
-    <meta name="twitter:description" content="Vultisig App Store" />
-    <meta name="twitter:site" content="https://store.vultisigplugin.app" />
-    <meta name="twitter:creator" content="Vultisig" />
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@vultisig" />
+    <meta name="twitter:creator" content="@vultisig" />
+    <meta
+      name="twitter:title"
+      content="Vultisig App Store - Secure Crypto Apps & Automations"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover and install secure cryptocurrency applications and automations for your Vultisig wallet. Access recurring swaps, automated sends, and more powerful crypto tools."
+    />
     <meta
       name="twitter:image"
       content="https://store.vultisigplugin.app/images/banner.jpg"
     />
+    <meta
+      name="twitter:image:alt"
+      content="Vultisig App Store - Secure Crypto Apps"
+    />
+
+    <!-- Additional SEO Tags -->
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="canonical" href="https://store.vultisigplugin.app" />
   </head>
   <body>
     <div id="root"></div>
